--- a/sample/index.html
+++ b/sample/index.html
@@ -3,97 +3,93 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accelerometer Data</title>
+    <title>Device Orientation & Motion Example</title>
     <style>
       body {
         font-family: Arial, sans-serif;
         text-align: center;
-        margin-top: 30px;
+        margin: 50px;
       }
-      .data {
+      .container {
         font-size: 20px;
-        margin: 10px 0;
-      }
-      button {
-        padding: 10px;
-        font-size: 16px;
-        cursor: pointer;
+        margin-top: 20px;
       }
     </style>
   </head>
   <body>
-    <h2>Accelerometer Data</h2>
-    <p class="data">X: <span id="x">Waiting...</span></p>
-    <p class="data">Y: <span id="y">Waiting...</span></p>
-    <p class="data">Z: <span id="z">Waiting...</span></p>
-
-    <h2>Rotation Data (Backup)</h2>
-    <p class="data">Alpha: <span id="alpha">Waiting...</span></p>
-    <p class="data">Beta: <span id="beta">Waiting...</span></p>
-    <p class="data">Gamma: <span id="gamma">Waiting...</span></p>
-
-    <h3>Status: <span id="status">Click the button to start</span></h3>
-    <button onclick="requestPermission()">Enable Sensor</button>
+    <h1>Device Orientation & Motion Example</h1>
+    <div class="container">
+      <p>
+        <strong>Alpha (Z-axis rotation):</strong> <span id="alpha">0</span>&deg;
+      </p>
+      <p>
+        <strong>Beta (Front-back tilt):</strong> <span id="beta">0</span>&deg;
+      </p>
+      <p>
+        <strong>Gamma (Left-right tilt):</strong> <span id="gamma">0</span>&deg;
+      </p>
+      <p><strong>Acceleration X:</strong> <span id="accel-x">0</span> m/s²</p>
+      <p><strong>Acceleration Y:</strong> <span id="accel-y">0</span> m/s²</p>
+      <p><strong>Acceleration Z:</strong> <span id="accel-z">0</span> m/s²</p>
+    </div>
 
     <script>
-      function requestPermission() {
-        if (typeof DeviceMotionEvent.requestPermission === "function") {
-          DeviceMotionEvent.requestPermission()
-            .then((permissionState) => {
-              if (permissionState === "granted") {
-                document.getElementById("status").textContent =
-                  "Permission granted! Listening for motion...";
-                startMotionTracking();
-              } else {
-                document.getElementById("status").textContent =
-                  "Permission denied!";
-              }
-            })
-            .catch((error) => {
-              document.getElementById("status").textContent = "Error: " + error;
-            });
-        } else {
-          document.getElementById("status").textContent =
-            "Listening for motion...";
-          startMotionTracking();
-        }
+      if (window.DeviceOrientationEvent) {
+        window.addEventListener(
+          "deviceorientation",
+          (event) => {
+            const rotateDegrees = event.alpha; // alpha: rotation around z-axis
+            const leftToRight = event.gamma; // gamma: left to right
+            const frontToBack = event.beta; // beta: front back motion
+
+            document.getElementById("alpha").textContent =
+              rotateDegrees.toFixed(2);
+            document.getElementById("beta").textContent =
+              frontToBack.toFixed(2);
+            document.getElementById("gamma").textContent =
+              leftToRight.toFixed(2);
+
+            handleOrientationEvent(frontToBack, leftToRight, rotateDegrees);
+          },
+          true
+        );
+      } else {
+        document.body.innerHTML = "<h2>Device Orientation not supported</h2>";
       }
 
-      function startMotionTracking() {
-        window.addEventListener("devicemotion", (event) => {
-          let acc = event.acceleration || event.accelerationIncludingGravity;
-          let rotation = event.rotationRate;
+      const handleOrientationEvent = (
+        frontToBack,
+        leftToRight,
+        rotateDegrees
+      ) => {
+        console.log("Front-Back Tilt:", frontToBack);
+        console.log("Left-Right Tilt:", leftToRight);
+        console.log("Rotation around Z-axis:", rotateDegrees);
+      };
 
-          // Check if accelerometer data is available
-          if (acc && (acc.x !== null || acc.y !== null || acc.z !== null)) {
-            document.getElementById("x").textContent = acc.x
-              ? acc.x.toFixed(2)
-              : "N/A";
-            document.getElementById("y").textContent = acc.y
-              ? acc.y.toFixed(2)
-              : "N/A";
-            document.getElementById("z").textContent = acc.z
-              ? acc.z.toFixed(2)
-              : "N/A";
-          } else {
-            document.getElementById("status").textContent =
-              "No accelerometer data available! Trying rotation...";
-          }
+      if (window.DeviceMotionEvent) {
+        window.addEventListener(
+          "devicemotion",
+          (event) => {
+            const x = event.accelerationIncludingGravity.x;
+            const y = event.accelerationIncludingGravity.y;
+            const z = event.accelerationIncludingGravity.z;
 
-          // Check if rotation data is available
-          if (rotation) {
-            document.getElementById("alpha").textContent = rotation.alpha
-              ? rotation.alpha.toFixed(2)
-              : "N/A";
-            document.getElementById("beta").textContent = rotation.beta
-              ? rotation.beta.toFixed(2)
-              : "N/A";
-            document.getElementById("gamma").textContent = rotation.gamma
-              ? rotation.gamma.toFixed(2)
-              : "N/A";
-          }
-        });
+            document.getElementById("accel-x").textContent = x.toFixed(2);
+            document.getElementById("accel-y").textContent = y.toFixed(2);
+            document.getElementById("accel-z").textContent = z.toFixed(2);
+
+            handleMotionEvent(x, y, z);
+          },
+          true
+        );
       }
+
+      const handleMotionEvent = (x, y, z) => {
+        console.log("Acceleration X:", x);
+        console.log("Acceleration Y:", y);
+        console.log("Acceleration Z:", z);
+      };
     </script>
   </body>
 </html>
